dynamic canvas flakes and fix flex layout bug

--- a/assets/style/_layout.scss
+++ b/assets/style/_layout.scss
@@ -17,19 +17,55 @@ body.covered {
   display: flex;
   overflow: hidden;
   flex-flow: column nowrap;
-  & > .container {
-    position: relative;
-    display: flex;
-    margin: 0 auto;
+}
+
+.page-content {
+  position: relative;
+  display: flex;
+  flex: 1 1 auto;
+  justify-content: center;
+  .container{
     flex: 1 1 auto;
-    overflow: hidden;
+    max-width: 100%;
     .inner{
-        flex:1 1 auto;
-        margin: 0 auto;
+      height: 100%;
     }
   }
 }
-
+// Footer
+.page-footer {
+  position: relative;
+  z-index: 1;
+  padding-top: $gutter-width;
+  color: $footer-font-color;
+  background-color: $footer-bg-color;
+  a {
+    color: $footer-link-color;
+  }
+  ul.slink {
+    margin: $gutter-width 0;
+    list-style: none;
+    & > li {
+      display: inline-block;
+      a {
+        color: #fff;
+      }
+      svg {
+        fill: #fff;
+      }
+    }
+  }
+  .footer-copyright {
+    overflow: hidden;
+    min-height: 50px;
+    display: flex;
+    align-items: center;
+    padding: 10px 0px;
+    color: $footer-copyright-font-color;
+    background-color: $footer-copyright-bg-color;
+    @extend .light;
+  }
+}
 .inner {
   max-width: $container-max-width;
   margin: auto;
