--- a/assets/style/materialize/components/_cards.scss
+++ b/assets/style/materialize/components/_cards.scss
@@ -15,6 +15,9 @@ $linkGap: 5px;
   transition: box-shadow 0.25s;
   border-radius: 2px;
   @extend .z-depth-1;
+  @media #{$small-and-down} {
+    box-shadow: none;
+  }
   .card-title {
     font-size: 24px;
     &.activator {
@@ -211,7 +214,7 @@ $linkGap: 5px;
       i {
         font-size: 20px;
       }
-      a{
+      a {
         // color: inherit;
         border-bottom: 1px dotted;
       }
